fix: more cart container visibility

--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ body {
 
 #cart {
   position: relative;
+  transition: 1s;
+
 }
 
 .cart-notification {
@@ -115,7 +117,7 @@ body {
   border-radius: 45%;
   text-align: center;
   z-index: 1;
-  transition: .2s;
+  transition: 1s;
 }
 
 #cart .cart-list {
@@ -127,7 +129,7 @@ body {
   border-radius: 15px;
   background: var(--White);
   box-shadow: 0px 10px 10px 15px var(--Light-grayish-blue);
-  transition: 1s;
+  transition: .2s;
   z-index: 1;
 }
 
